# formal

./: .envrc  .gitignore  .gitmodules  README.md  pyproject.toml  update_tree_sitter_grammars.sh
conf/: ingest.yaml  tokenize.yaml  train.yaml
conf/experiment/ingest/: default.yaml
conf/experiment/tokenize/: default.yaml  reformalize.yaml
conf/experiment/train/: default.yaml  reformalize.yaml  sft_formal.yaml  sft_text.yaml
conf/formalization/: default.yaml  enclosing.yaml  fielded.yaml  full.yaml  postfix.yaml  textual.yaml
conf/runtime/: default.yaml
conf/wandb/: default.yaml
report/: plot_training_losses.py  references.bib  report.tex  training_losses.csv
src/formal/: __init__.py  config.py  language.py
src/formal/artifacts/: __init__.py  datasets.py  models.py  path.py  references.py
src/formal/engine/: __init__.py  buffer.py  engine.py  frontend.py  lexer.py
src/formal/engine/parser/: parser.py
src/formal/engine/parser/lattice/: __init__.py  _vertex.py  lattice.py
src/formal/engine/parser/stack/: __init__.py  node.py  queue.py
src/formal/engine/scanner/: __init__.py  _ts_lexer.py  empty.py  external.py  interface.py  scanlet.py  scanner.py
src/formal/grammar/: __init__.py  _builder.py  compile.py  types.py
src/formal/ingestion/: __init__.py  _fetch.py  config.py  ingest.py
src/formal/model/: __init__.py  modeling.py  pretrained.py
src/formal/scripts/: ingest.py  tokenize.py  train.py
src/formal/tokenization/: __init__.py  config.py  encoding.py  tokenize.py  tokenizer.py  vocab.py
src/formal/training/: __init__.py  config.py  train.py  trainer.py
src/formal/utils/: __init__.py  formatting.py  hf_hub.py  hydra.py  torch.py  wandb.py
tests/: engine.ipynb
