[project]
name = "formal"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Alexandre Bouayad", email = "alex.bouayad@gmail.com" }]
requires-python = ">=3.13,<3.14"

dependencies = [
    "beartype>=0.22.9",
    "boto3>=1.43.36",
    "datasets>=5.0.0",
    "greenlet>=3.5.3",
    "huggingface-hub>=1.21.0",
    "hydra-core>=1.3.3",
    "jaxtyping>=0.3.11",
    "peft>=0.19.1",
    "rich>=15.0.0",
    "safetensors>=0.8.0",
    "smart-open>=7.7.1",
    "tokenizers>=0.22.2,<=0.23.0",
    "torch<2.11",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash==0.25.1",
    "tree-sitter-c==0.24.2",
    "tree-sitter-cpp==0.23.4",
    "tree-sitter-c-sharp==0.23.5",
    "tree-sitter-go==0.25.0",
    "tree-sitter-haskell==0.23.1",
    "tree-sitter-html==0.23.2",
    "tree-sitter-java==0.23.5",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-json==0.24.8",
    "tree-sitter-julia==0.23.1",
    "tree-sitter-ocaml==0.25.0",
    "tree-sitter-php==0.24.1",
    "tree-sitter-python==0.25.0",
    "tree-sitter-regex==0.25.0",
    "tree-sitter-ruby==0.23.1",
    "tree-sitter-rust==0.24.2",
    "tree-sitter-scala==0.26.0",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-verilog==1.0.3",
    "ts-generate", # TODO
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "hydra-core>=1.3.3",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyterlab>=4.6.0",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-execute-time>=3.3.0",
    "line-profiler>=5.0.2",
    "mypy>=2.1.0",
    "omegaconf>=2.3.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
formal-ingest = "formal.scripts.ingest:main"
formal-tokenize = "formal.scripts.tokenize:main"
formal-train = "formal.scripts.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/formal"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["ALL"]

[tool.black]
line-length = 120

[tool.mypy]
strict = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.uv.sources]
ts-generate = { path = "tree-sitter/cli/generate" } # TODO
